--- a/HTML-Overview/index.html
+++ b/HTML-Overview/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Practise</title> 
+        <title>Practise</title>
+        <style>
+            /* Accessing Tags  */
+            h1 {
+                color: red;
+            }
+            p{
+                background-color: lightblue;
+            }
+
+            /* Accessing Id */
+            #unique{
+                text-decoration: underline;
+            }
+           
+            /* Accessing Class */
+            .common {
+                background-color: lawngreen;
+            }
+
+        </style>
     </head>
     <body>
         <!-- Headings  -->
@@ -17,10 +37,12 @@
 
         <!-- Division -->
 
-        <div>
+        <div id="unique">
             Hello
             <p>Coder</p>
         </div>
+
+        <div class="common">Hello</div>
 
         <!-- UnOrdered List -->
         <ul>
